plugins/groovy/testdata/highlighting/ThisInStaticContext.groovy
class X{
  static foo(){
    <error descr="Cannot reference nonstatic symbol 'this' from static context">this</error>.toString()
  }
}